Added new files

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
     <head>
-        <title>Tavis Sinclair | Student Front-end Developer</title>
+        <title>Contact Me</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/index.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
@@ -12,13 +11,10 @@
             <div class="headerLogo">
                 <img src="./img/logo.png">
             </div>
-            <div class=headerMenu>
-                <img src="./img/menu.png">
+            <div class="headerCtrl">
+                <button><img src="./img/reset.png"></button>
+                <button><img src="./img/close.png"></button>
             </div>
         </div>
-        <div class="body">
-            <h1>Student Front-end Developer</h1>
-            <h2>Hello there, I'm Tavis, a 1st year student with an interest in web design.</h2>
-            <img src="./img/me.png">
-        </div>
+        
     </body>
