--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,39 @@
         <title>Contact Me</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/contact.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
-            <div class="headerLogo">
-                <img src="./img/logo.png">
+            <div>
+                <img class="logo" src="./img/logo.png">
             </div>
             <div class="headerCtrl">
-                <button><img src="./img/reset.png"></button>
-                <button><img src="./img/close.png"></button>
+                <img src="./img/reset.png">
+                <img src="./img/close.png">
             </div>
         </div>
-        
+        <div class="intro">
+            <img class="me" src="./img/me.png">
+            <h1>If you wish to get in touch with me for any reason, feel free to!</h1>
+        </div>
+        <div class="contact">
+            <div class="contactName">
+                <label>Name</label>
+                <input type="text">
+            </div>
+            <div class="contactEmail">
+                <label>Email</label>
+                <input type="text">
+            </div>
+            <div class="contactMessage">
+                <label>Message</label>
+                <input type="text">
+            </div>
+            <div class="contactSubmit">
+                <button>Submit</button>
+            </div>
+        </div>
     </body>
