--- a/index.html
+++ b/index.html
@@ -9,16 +9,35 @@
     </head>
     <body>
         <div class="header">
-            <div class="headerLogo">
-                <img src="./img/logo.png">
+            <div>
+                <img class="logo" src="./img/logo.png">
             </div>
-            <div class=headerMenu>
+            <div>
                 <img src="./img/menu.png">
             </div>
         </div>
-        <div class="body">
+        <div class="intro">
             <h1>Student Front-end Developer</h1>
             <h2>Hello there, I'm Tavis, a 1st year student with an interest in web design.</h2>
             <img src="./img/me.png">
+            <!--Image goes here-->
+        </div>
+        <div class="about">
+            <div class="aboutTxt">
+                <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. 
+                Aenean euismod bibendum laoreet. 
+                Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. 
+                Proin sodales pulvinar sic tempor. 
+                Sociis natoque penatibus et magnis dis parturient montes, 
+                nascetur ridiculus mus. 
+                Nam fermentum, nulla luctus pharetra vulputate, 
+                felis tellus mollis orci, 
+                sed rhoncus pronin sapien nunc accuan eget.</p>
+                <button>Find out more</button>
+            </div>
+        </div>
+        <div class="">
+
         </div>
     </body>
