--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
                 <label>Email</label>
                 <input type="text">
             </div>
-            <div class="contactMessage">
-                <label>Message</label>
-                <input type="text">
-            </div>
-            <div class="contactSubmit">
-                <button>Submit</button>
-            </div>
+        </div>
+        <div class="contactMessage">
+            <label>Message</label>
+            <textarea></textarea>
+        </div>
+        <div class="contactSubmit">
+            <button>Submit</button>
         </div>
     </body>
