--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,10 @@
     <body>
         <div class="header">
             <div>
-                <img class="logo" src="./img/logo.png">
+                <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
             </div>
             <div class="headerCtrl">
-                <img src="./img/reset.png">
-                <img src="./img/close.png">
+                <a href="./index.html"><img class="closeBtn" src="./img/close.png"></a>
             </div>
         </div>
         <div class="intro">
