--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/dropMenu.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
             <div>
-                <img class="logo" src="./img/logo.png">
+                <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
             </div>
-            <div>
-                <img src="./img/menu.png">
+            <div class="dropDown">
+                <img class="dropBtn" src="./img/menu.png">
+                <div class="dropDownMenu">
+                    <a href="./about.html">About Me</a>
+                    <a href="./contact.html">Contact</a>
+                </div>
             </div>
         </div>
         <div class="intro">
@@ -37,7 +42,12 @@
                 <button>Find out more</button>
             </div>
         </div>
-        <div class="">
+        <div class="skills">
+            <div class="coding">
 
+            </div>
+            <div class="graphicDesign">
+
+            </div>
         </div>
     </body>
