--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/index.css">
         <link rel="stylesheet" href="./css/dropMenu.css">
+        <link rel="icon" href="./img/logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
@@ -23,28 +24,22 @@
         </div>
         <div class="intro">
             <h1>Student Front-end Developer</h1>
-            <h2>Hello there, I'm Tavis, a 1st year student with an interest in web design.</h2>
+            <h2>1st year student with an interest in web design.</h2>
             <img src="./img/me.png">
             <!--Image goes here-->
         </div>
         <div class="about">
             <div class="aboutTxt">
-                <p>Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit. 
-                Aenean euismod bibendum laoreet. 
-                Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. 
-                Proin sodales pulvinar sic tempor. 
-                Sociis natoque penatibus et magnis dis parturient montes, 
-                nascetur ridiculus mus. 
-                Nam fermentum, nulla luctus pharetra vulputate, 
-                felis tellus mollis orci, 
-                sed rhoncus pronin sapien nunc accuan eget.</p>
-                <button>Find out more</button>
+                <p>Hello there, I'm Tavis!<br>
+                I am a first year student at OAMK studying a Degree Programme in Information Technology.<br>
+                
+                If you wish to find out more about me, you can click below!</p>
+                <button>Click me!</button>
             </div>
         </div>
         <div class="skills">
             <div class="coding">
-
+                
             </div>
             <div class="graphicDesign">
 
