--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/contact.css">
+        <link rel="icon" href="./img/logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
