--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="about">
             <div class="aboutTxt">
                 <p>Hello there, I'm Tavis!<br>
-                I am a first year student at OAMK studying a Degree Programme in Information Technology.<br>
+                I am a first year student and I am currently studying BEng in IT at OAMK.<br>
                 
                 If you wish to find out more about me, you can click below!</p>
                 <button>Click me!</button>
@@ -39,10 +39,15 @@
         </div>
         <div class="skills">
             <div class="coding">
-                
+                <!--Image goes here-->
+                <h2>Front-end</h2>
             </div>
-            <div class="graphicDesign">
-
+            <div class="design">
+                <!--Image goes here-->
+                <h2>Design</h2>
             </div>
         </div>
+        <footer>
+            <p>Designed and coded by <a href="https://github.com/coding-dummy" target="_blank">me</a></p>
+        </footer>
     </body>
