--- a/index.html
+++ b/index.html
@@ -4,50 +4,14 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/about.css">
+        <link rel="stylesheet" href="./css/contact.css">
         <link rel="stylesheet" href="./css/dropMenu.css">
         <link rel="icon" href="./img/logo.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="header">
-            <div>
-                <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
-            </div>
-            <div class="dropDown">
-                <img class="dropBtn" src="./img/menu.png">
-                <div class="dropDownMenu">
-                    <a href="./about.html">About Me</a>
-                    <a href="./contact.html">Contact</a>
-                </div>
-            </div>
-        </div>
-        <div class="intro">
-            <h1>Student Front-end Developer</h1>
-            <h2>1st year student with an interest in web design.</h2>
-            <img src="./img/me.png">
-            <!--Image goes here-->
-        </div>
-        <div class="about">
-            <div class="aboutTxt">
-                <p>Hello there, I'm Tavis!<br>
-                I am a first year student and I am currently studying BEng in IT at OAMK.<br>
-                
-                If you wish to find out more about me, you can click below!</p>
-                <button>Click me!</button>
-            </div>
-        </div>
-        <div class="skills">
-            <div class="coding">
-                <!--Image goes here-->
-                <h2>Front-end</h2>
-            </div>
-            <div class="design">
-                <!--Image goes here-->
-                <h2>Design</h2>
-            </div>
-        </div>
-        <footer>
-            <p>Designed and coded by <a href="https://github.com/coding-dummy" target="_blank">me</a></p>
-        </footer>
+        <div id="pageContent"></div>
+        <script src="./js/functions.js"></script>
     </body>
